# obsidian-publisher

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
obsidian_publisher/: __init__.py
obsidian_publisher/cli/: main.py
obsidian_publisher/core/: __init__.py  discovery.py  models.py  processor.py  publisher.py
obsidian_publisher/images/: optimizer.py
obsidian_publisher/transforms/: __init__.py  frontmatter.py  tags.py
tests/: __init__.py  test_cli.py  test_discovery.py  test_processor.py  test_publisher.py  test_transforms.py  test_verification.py
